# simplelogin-contacts-suite

./: .gitignore  LICENSE  README.md
apps/macos-helper/: README.md  SPEC.md
apps/server-sync/: Dockerfile  README.md  requirements.txt  sync.py
apps/smtp-proxy/: Dockerfile  LICENSE  README.md  pyproject.toml
apps/smtp-proxy/src/sl_smtp_proxy/: cache.py  config.py  config_validation.py  forwarder.py  healthcheck.py  logging.py  main.py  message_transform.py  mime_sender_validation.py  reverse_alias_resolver.py  safety_verifier.py  smtp_server.py
apps/smtp-proxy/tests/: test_config.py  test_config_validation.py  test_healthcheck.py  test_message_transform.py  test_mime_sender_validation.py  test_reverse_alias_resolver.py  test_safety_verifier.py  test_smtp_server.py
deploy/docker/: .env.server-sync.example  .env.smtp-proxy.example  README.md  docker-compose.full.yml  docker-compose.server-sync.yml  docker-compose.smtp-proxy.yml  fake-smtp.py
docs/: architecture.md  implementation-milestones.md  security-threat-model.md  smtp-proxy-spec.md
